--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -26,7 +26,7 @@
         <Button Content="Knapp" Visibility="Visible" Grid.Row="4" Grid.Column="3" Grid.ColumnSpan="2"/>
 
         <StackPanel Grid.Row="1" Grid.Column="2">
-            <Button Content="Knapp" Margin="15,15,15,8" MinWidth="150"/>
+            <Button Content="Knapp" Margin="15,15,15,8" MinWidth="150" Click="Button_Click"/>
             <Button Content="Knapp" Margin="15,7,15,15"/>
         </StackPanel>
         <!--Förstår inte riktigt vad "Collapsed" gör?-->
